automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -71,9 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "travel_month = \"January\""
@@ -105,7 +103,7 @@
    },
    "outputs": [],
    "source": [
-    "number_of_weeks # 3"
+    "number_of_weeks = 3"
    ]
   },
   {
@@ -123,7 +121,7 @@
    },
    "outputs": [],
    "source": [
-    "number_of_weeks # 5"
+    "number_of_weeks = 5"
    ]
   },
   {
